# SSM-GED

./: .gitignore  CMakeLists.txt  com.txt  compare.sh  tmp.cpp
configuration/: config.h  types.h
graph/: graph.cpp  graph.h
matching/: algo.h  main.cpp
utility/: utility.h
